tests/baselines/reference/recursiveBaseConstructorCreation3.errors.txt
==== tests/cases/compiler/recursiveBaseConstructorCreation3.ts (1 errors) ====
    declare class base<T> {
    }
    declare class abc<T> extends base<T> {
        foo: xyz;
    }
    declare class xyz extends abc {
                              ~~~
!!! recursiveBaseConstructorCreation3.ts(6,27): error TS2173: Generic type references must include all type arguments.
    }
    
    var bar = new xyz(); // Error: Invalid 'new' expression.
    var r: xyz = bar.foo;